--- a/AlphaFold2.ipynb
+++ b/AlphaFold2.ipynb
@@ -76,9 +76,9 @@
         "def add_hash(x,y):\n",
         "  return x+\"_\"+hashlib.sha1(y.encode()).hexdigest()[:5]\n",
         "\n",
-        "query_sequence = 'MV NAGAMSGSGNLMDFLDEPFPDVGTYEDFHTIDWLREKSRDTDRHRKITSKSKE SIWEFIKSLLDAWSGWVVMLLIGLLAGTLAGVIDLAVDWMTDLKEGVCLSAFWYSHEQCCWTSNETTFEDRD KCPLWQKWSELLVNQSEGASAYILNYLMYILWALLFAFLAVSLVRVFAPYACGSGIPEIKTILSGFIIRGYL GKWTLLIKTVTLVLVVSSGLSLGKEGPLVHVACCCGNFFSSLFSKYSKNEGKRREVLSAA AAAGVSVAFGAPIGGVLFSLEEVSYYFPLKTLWRSFFAALVAAFTLRSINPFGNSRLVLFYVEY HTPWYMAELFPFILLGVFGGLWGTLFIRCNIAWCRRRKTTRLGKYPVLEVIVVTAITA IIAYPNPYTRQSTSELISELFNDC GALESSQLCDYINDPNMTRPVDDIPDRPAGVGVYTAMWQLALALIFKIVVTIFTFGMKIPSGL FIPSMAVGAIAGRMVGIGVEQLAYHHHDWIIFRNWCRPGADCVTPGLYAMVGAAACLGGVTRMTVSLVVIMF ELTGGLEYIVPLMAAAVTSKWVADAFGKEGIYEAHIHLNGYPFLDVKDEFTHRTLATDVMRPRRGEPP LSVLTQDSMTVEDVETLIKETDYNGFPVVVSRDSERLIGFAQRRELILAIKN ARQRQEGIVSNS IMYFTEEPPELPANSPHPLKLRRILNLS PFTVTDHTPMETVVDIFRKLGLRQCLVTRSGRLLGIITKKDV LRHMAQMANQDPESIMFN :IIIYLSILGLLLLYMVYLTLVEPILKRRLFGHAQLIQSDDDIGDHQPFANAHDVLARSRSRANVLNKVEYAQ QRWKLQVQEQRKSVFDRHVVLS' #@param {type:\"string\"}\n",
+        "query_sequence = 'MV NAGAMSGSGNLMDFLDEPFPDVGTYEDFHTIDWLREKSRDTDRHRKITSKSKE SIWEFIKSLLDAWSGWVVMLLIGLLAGTLAGVIDLAVDWMTDLKEGVCLSAFWYSHEQCCWTSNETTFEDRD KCPLWQKWSELLVNQSEGASAYILNYLMYILWALLFAFLAVSLVRVFAPYACGSGIPEIKTILSGFIIRGYL GKWTLLIKTVTLVLVVSSGLSLGKEGPLVHVACCCGNFFSSLFSKYSKNEGKRREVLSAA AAAGVSVAFGAPIGGVLFSLEEVSYYFPLKTLWRSFFAALVAAFTLRSINPFGNSRLVLFYVEY HTPWYMAELFPFILLGVFGGLWGTLFIRCNIAWCRRRKTTRLGKYPVLEVIVVTAITA IIAYPNPYTRQSTSELISELFNDC GALESSQLCDYINDPNMTRPVDDIPDRPAGVGVYTAMWQLALALIFKIVVTIFTFGMKIPSGL FIPSMAVGAIAGRMVGIGVEQLAYHHHDWIIFRNWCRPGADCVTPGLYAMVGAAACLGGVTRMTVSLVVIMF ELTGGLEYIVPLMAAAVTSKWVADAFGKEGIYEAHIHLNGYPFLDVKDEFTHRTLATDVMRPRRGEPP LSVLTQDSMTVEDVETLIKETDYNGFPVVVSRDSERLIGFAQRRELILAIKN ARQRQEGIVSNS IMYFTEEPPELPANSPHPLKLRRILNLS PFTVTDHTPMETVVDIFRKLGLRQCLVTRSGRLLGIITKKDV LRHMAQMANQDPESIMFN MV NAGAMSGSGNLMDFLDEPFPDVGTYEDFHTIDWLREKSRDTDRHRKITSKSKE SIWEFIKSLLDAWSGWVVMLLIGLLAGTLAGVIDLAVDWMTDLKEGVCLSAFWYSHEQCCWTSNETTFEDRD KCPLWQKWSELLVNQSEGASAYILNYLMYILWALLFAFLAVSLVRVFAPYACGSGIPEIKTILSGFIIRGYL GKWTLLIKTVTLVLVVSSGLSLGKEGPLVHVACCCGNFFSSLFSKYSKNEGKRREVLSAA AAAGVSVAFGAPIGGVLFSLEEVSYYFPLKTLWRSFFAALVAAFTLRSINPFGNSRLVLFYVEY HTPWYMAELFPFILLGVFGGLWGTLFIRCNIAWCRRRKTTRLGKYPVLEVIVVTAITA IIAYPNPYTRQSTSELISELFNDC GALESSQLCDYINDPNMTRPVDDIPDRPAGVGVYTAMWQLALALIFKIVVTIFTFGMKIPSGL FIPSMAVGAIAGRMVGIGVEQLAYHHHDWIIFRNWCRPGADCVTPGLYAMVGAAACLGGVTRMTVSLVVIMF ELTGGLEYIVPLMAAAVTSKWVADAFGKEGIYEAHIHLNGYPFLDVKDEFTHRTLATDVMRPRRGEPP LSVLTQDSMTVEDVETLIKETDYNGFPVVVSRDSERLIGFAQRRELILAIKN ARQRQEGIVSNS IMYFTEEPPELPANSPHPLKLRRILNLS PFTVTDHTPMETVVDIFRKLGLRQCLVTRSGRLLGIITKKDV LRHMAQMANQDPESIMFN :NFEDVRCKCICPPYKENPGHIYNKNISQKDCDCLHVVEPMPVRGPDVEAYCLRCECKYEERSSVTIKVTIIIYLSILGLLLL YMVYLTLVEPILKRRLFGHSQLLQSDDDVGDHQPFANAHDVLARSRSRANVLNKVEYAQQRWKLQVQEQRKSVFDRHVVLSGGPGGGGGGGKPIPNPLLGLDST' #@param {type:\"string\"}\n",
         "#@markdown  - Use `:` to specify inter-protein chainbreaks for **modeling complexes** (supports homo- and hetro-oligomers). For example **PI...SK:PI...SK** for a homodimer\n",
-        "jobname = 't9' #@param {type:\"string\"}\n",
+        "jobname = 't9b-44' #@param {type:\"string\"}\n",
         "# number of models to use\n",
         "num_relax = 0 #@param [0, 1, 5] {type:\"raw\"}\n",
         "#@markdown - specify how many of the top ranked structures to relax using amber\n",
@@ -179,27 +179,10 @@
       ],
       "metadata": {
         "cellView": "form",
-        "id": "AzIKiDiCaHAn",
-        "outputId": "576a9157-1a28-4cbf-81d3-10c17ace5f2c",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "AzIKiDiCaHAn"
       },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "metadata": {
-            "tags": null
-          },
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "installing colabfold...\n",
-            "CPU times: user 188 ms, sys: 32.8 ms, total: 221 ms\n",
-            "Wall time: 48.6 s\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -242,7 +225,7 @@
         "cellView": "form",
         "id": "C2_sh2uAonJH"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -252,7 +235,7 @@
         "model_type = \"auto\" #@param [\"auto\", \"alphafold2_ptm\", \"alphafold2_multimer_v1\", \"alphafold2_multimer_v2\", \"alphafold2_multimer_v3\", \"deepfold_v1\"]\n",
         "#@markdown - if `auto` selected, will use `alphafold2_ptm` for monomer prediction and `alphafold2_multimer_v3` for complex prediction.\n",
         "#@markdown Any of the mode_types can be used (regardless if input is monomer or complex).\n",
-        "num_recycles = \"3\" #@param [\"auto\", \"0\", \"1\", \"3\", \"6\", \"12\", \"24\", \"48\"]\n",
+        "num_recycles = \"auto\" #@param [\"auto\", \"0\", \"1\", \"3\", \"6\", \"12\", \"24\", \"48\"]\n",
         "#@markdown - if `auto` selected, will use `num_recycles=20` if `model_type=alphafold2_multimer_v3`, else `num_recycles=3` .\n",
         "recycle_early_stop_tolerance = \"auto\" #@param [\"auto\", \"0.0\", \"0.5\", \"1.0\"]\n",
         "#@markdown - if `auto` selected, will use `tol=0.5` if `model_type=alphafold2_multimer_v3` else `tol=0.0`.\n",
@@ -276,7 +259,7 @@
         "#@markdown #### Save settings\n",
         "save_all = False #@param {type:\"boolean\"}\n",
         "save_recycles = False #@param {type:\"boolean\"}\n",
-        "save_to_google_drive = True #@param {type:\"boolean\"}\n",
+        "save_to_google_drive = False #@param {type:\"boolean\"}\n",
         "#@markdown -  if the save_to_google_drive option was selected, the result zip will be uploaded to your Google Drive\n",
         "dpi = 200 #@param {type:\"integer\"}\n",
         "#@markdown - set dpi for image resolution\n",
